exports[`test default stagePackages 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "desktop-launch $SNAP/sep",
      "plugs": Array [
        Array [
          "home",
          "x11",
          "unity7",
          "browser-support",
          "network",
          "gsettings",
          "pulseaudio",
          "opengl",
        ],
      ],
    },
  },
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "setup/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-glib-only",
      ],
      "plugin": "dump",
      "stage-packages": Array [
        "libnotify4",
        "libappindicator1",
        "libxtst6",
        "libnss3",
        "libxss1",
        "fontconfig-config",
        "gconf2",
        "libasound2",
        "pulseaudio",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`test default stagePackages 2`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "desktop-launch $SNAP/sep",
      "plugs": Array [
        Array [
          "home",
          "x11",
          "unity7",
          "browser-support",
          "network",
          "gsettings",
          "pulseaudio",
          "opengl",
          "custom",
        ],
      ],
    },
  },
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "setup/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-glib-only",
      ],
      "plugin": "dump",
      "stage-packages": Array [
        "libnotify4",
        "libappindicator1",
        "libxtst6",
        "libnss3",
        "libxss1",
        "fontconfig-config",
        "gconf2",
        "libasound2",
        "pulseaudio",
        "custom",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`test default stagePackages 3`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "desktop-launch $SNAP/sep",
      "plugs": Array [
        Array [
          "custom",
          "home",
          "x11",
          "unity7",
          "browser-support",
          "network",
          "gsettings",
          "pulseaudio",
          "opengl",
        ],
      ],
    },
  },
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "setup/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-glib-only",
      ],
      "plugin": "dump",
      "stage-packages": Array [
        "custom",
        "libnotify4",
        "libappindicator1",
        "libxtst6",
        "libnss3",
        "libxss1",
        "fontconfig-config",
        "gconf2",
        "libasound2",
        "pulseaudio",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`test default stagePackages 4`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "desktop-launch $SNAP/sep",
      "plugs": Array [
        Array [
          "foo1",
          "home",
          "x11",
          "unity7",
          "browser-support",
          "network",
          "gsettings",
          "pulseaudio",
          "opengl",
          "foo2",
        ],
      ],
    },
  },
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "setup/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-glib-only",
      ],
      "plugin": "dump",
      "stage-packages": Array [
        "foo1",
        "libnotify4",
        "libappindicator1",
        "libxtst6",
        "libnss3",
        "libxss1",
        "fontconfig-config",
        "gconf2",
        "libasound2",
        "pulseaudio",
        "foo2",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;
